--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   line-height: 1;
   font-weight: 400;
 
-  background-image: url(/form_img.webp);
+  background-image: url(form_img.webp);
   background-repeat: no-repeat;
   background-size: contain;
 }
